--- a/01-basics/01-CounterButtonApp/index.html
+++ b/01-basics/01-CounterButtonApp/index.html
@@ -5,8 +5,9 @@
     <title>CounterButtonApp</title>
   </head>
   <body>
+
     <div id="app">
-      <button type="button">0</button>
+      <button v-on:click="incrementCounter();" type="button">{{ counter }}</button>
     </div>
 
     <script type="module" src="script.js"></script>
