--- a/01-basics/01-CounterButtonApp/index.html
+++ b/01-basics/01-CounterButtonApp/index.html
@@ -5,9 +5,8 @@
     <title>CounterButtonApp</title>
   </head>
   <body>
-
     <div id="app">
-      <button v-on:click="incrementCounter();" type="button">{{ counter }}</button>
+      <button @click="incrementCounter();" type="button">{{ counter }}</button>
     </div>
 
     <script type="module" src="script.js"></script>
