--- a/01-basics/02-VueCalculator/index.html
+++ b/01-basics/02-VueCalculator/index.html
@@ -31,23 +31,23 @@
     <div id="app" class="container">
       <div class="row">
         <div class="col">
-          <input type="number" />
+          <input type="number" @change="onChange()" v-model="firstArgument"/>
         </div>
 
         <div class="col" style="display: flex; flex-direction: column; font-family: emoji">
-          <label><input type="radio" value="sum" /> ➕</label>
-          <label><input type="radio" value="subtract" /> ➖</label>
-          <label><input type="radio" value="multiply" /> ✖</label>
-          <label><input type="radio" value="divide" /> ➗</label>
+          <label><input type="radio" @change="onChange()" v-model="operator" name="operation" value="sum" /> ➕</label>
+          <label><input type="radio" @change="onChange()" v-model="operator" name="operation" value="subtract" /> ➖</label>
+          <label><input type="radio" @change="onChange()" v-model="operator" name="operation" value="multiply" /> ✖</label>
+          <label><input type="radio" @change="onChange()" v-model="operator" name="operation" value="divide" /> ➗</label>
         </div>
 
         <div class="col">
-          <input type="number" />
+          <input type="number" @change="onChange()" v-model="secondArgument" />
         </div>
 
         <div class="col">=</div>
 
-        <output class="col">0</output>
+        <output class="col" :value="result"></output>
       </div>
     </div>
 
