--- a/01-basics/02-VueCalculator/index.html
+++ b/01-basics/02-VueCalculator/index.html
@@ -31,18 +31,18 @@
     <div id="app" class="container">
       <div class="row">
         <div class="col">
-          <input type="number" @change="onChange()" v-model="firstArgument"/>
+          <input type="number" @input="onChange" v-model="firstArgument"/>
         </div>
 
         <div class="col" style="display: flex; flex-direction: column; font-family: emoji">
-          <label><input type="radio" @change="onChange()" v-model="operator" name="operation" value="sum" /> ➕</label>
-          <label><input type="radio" @change="onChange()" v-model="operator" name="operation" value="subtract" /> ➖</label>
-          <label><input type="radio" @change="onChange()" v-model="operator" name="operation" value="multiply" /> ✖</label>
-          <label><input type="radio" @change="onChange()" v-model="operator" name="operation" value="divide" /> ➗</label>
+          <label><input type="radio" v-model="operator" name="operation" value="sum" /> ➕</label>
+          <label><input type="radio" v-model="operator" name="operation" value="subtract" /> ➖</label>
+          <label><input type="radio" v-model="operator" name="operation" value="multiply" /> ✖</label>
+          <label><input type="radio" v-model="operator" name="operation" value="divide" /> ➗</label>
         </div>
 
         <div class="col">
-          <input type="number" @change="onChange()" v-model="secondArgument" />
+          <input type="number" @input="onChange" v-model="secondArgument" />
         </div>
 
         <div class="col">=</div>
